# live_streaming_websocket

./: CMakeLists.txt  ProcessingFFmpegToWebSocket.cpp  ProcessingFFmpegToWebSocket.h  README.md  WebServer.cpp  WebServer.h  index.html  main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
views/: index.html  test.html
views/css/: main.css
views/js/: main.js
